// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartForm /> should cancel properly when editing 1`] = `
.emotion-17 {
  height: 100%;
  overflow: hidden;
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-15 {
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-15 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-15 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-1 {
  height: 24px;
}

.emotion-3 {
  color: #b3b3b3;
}

.emotion-2 {
  margin-top: 8px;
  width: 100%;
  padding: 12px 8px;
  background-color: #808080;
  color: #ffffff;
  border-radius: 2px;
  border: none;
  font-size: 15px;
  line-height: 19px;
  padding-left: 12px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right 8px top 50%;
  background-size: 20px;
}

.emotion-4 {
  height: 16px;
}

.emotion-8 {
  padding-top: 8px;
}

.emotion-5 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-7 {
  position: relative;
}

.emotion-6 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-6:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-6:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-10,
.emotion-10:hover,
.emotion-10:visited {
  background-color: #808080;
}

.emotion-10:hover {
  background-color: #b3b3b3;
}

.emotion-10[aria-disabled=true] {
  background-color: #808080;
}

.emotion-11 {
  width: 8px;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited {
  background-color: #73b61c;
}

.emotion-12:hover {
  background-color: #96c955;
}

.emotion-12[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-16"
  >
    <div
      className="emotion-15"
    >
      <form
        action=""
        className="emotion-14"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-0"
        >
          Facet
           Visualization
        </h2>
        <div
          className="emotion-1"
        />
        <label
          className="emotion-3"
        >
          Metadata Type
          <select
            className="emotion-2"
            defaultValue=""
            onChange={[Function]}
          >
            <option
              disabled={true}
              value=""
            >
              Select metadata type
            </option>
            <optgroup
              label="Analysis"
            >
              <optgroup
                label="Zvi"
              >
                <option
                  value="analysis.zvi.tinyProxy"
                >
                  tinyProxy
                </option>
              </optgroup>
            </optgroup>
            <optgroup
              label="Clip"
            >
              <option
                value="clip.pile"
              >
                pile
              </option>
              <option
                value="clip.sourceAssetId"
              >
                sourceAssetId
              </option>
              <option
                value="clip.timeline"
              >
                timeline
              </option>
              <option
                value="clip.type"
              >
                type
              </option>
            </optgroup>
            <optgroup
              label="Location"
            >
              <option
                value="location.city"
              >
                city
              </option>
              <option
                value="location.code"
              >
                code
              </option>
              <option
                value="location.country"
              >
                country
              </option>
            </optgroup>
            <optgroup
              label="Media"
            >
              <option
                value="media.author"
              >
                author
              </option>
              <option
                value="media.content"
              >
                content
              </option>
              <option
                value="media.description"
              >
                description
              </option>
              <option
                value="media.keywords"
              >
                keywords
              </option>
              <option
                value="media.orientation"
              >
                orientation
              </option>
              <option
                value="media.title"
              >
                title
              </option>
              <option
                value="media.type"
              >
                type
              </option>
            </optgroup>
            <optgroup
              label="Source"
            >
              <option
                value="source.extension"
              >
                extension
              </option>
              <option
                value="source.filename"
              >
                filename
              </option>
              <option
                value="source.mimetype"
              >
                mimetype
              </option>
              <option
                value="source.path"
              >
                path
              </option>
            </optgroup>
            <optgroup
              label="System"
            >
              <option
                value="system.dataSourceId"
              >
                dataSourceId
              </option>
              <option
                value="system.jobId"
              >
                jobId
              </option>
              <option
                value="system.projectId"
              >
                projectId
              </option>
              <option
                value="system.state"
              >
                state
              </option>
              <option
                value="system.taskId"
              >
                taskId
              </option>
            </optgroup>
          </select>
        </label>
        <div
          className="emotion-4"
        />
        <div
          className="emotion-8"
        >
          <label
            className="emotion-5"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-7"
          >
            <input
              className="emotion-6"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-8"
          >
             
          </div>
        </div>
        <div
          className="emotion-13"
        >
          <button
            className="emotion-10"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-11"
          />
          <button
            aria-disabled={true}
            className="emotion-12"
            onClick={[Function]}
            type="button"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ChartForm /> should render properly without attribute 1`] = `
.emotion-17 {
  height: 100%;
  overflow: hidden;
}

.emotion-16 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-15 {
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-15 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-15 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-1 {
  height: 24px;
}

.emotion-3 {
  color: #b3b3b3;
}

.emotion-2 {
  margin-top: 8px;
  width: 100%;
  padding: 12px 8px;
  background-color: #808080;
  color: #ffffff;
  border-radius: 2px;
  border: none;
  font-size: 15px;
  line-height: 19px;
  padding-left: 12px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  background-position: right 8px top 50%;
  background-size: 20px;
}

.emotion-4 {
  height: 16px;
}

.emotion-8 {
  padding-top: 8px;
}

.emotion-5 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-7 {
  position: relative;
}

.emotion-6 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-6:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-6:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-10,
.emotion-10:hover,
.emotion-10:visited {
  background-color: #808080;
}

.emotion-10:hover {
  background-color: #b3b3b3;
}

.emotion-10[aria-disabled=true] {
  background-color: #808080;
}

.emotion-11 {
  width: 8px;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited {
  background-color: #73b61c;
}

.emotion-12:hover {
  background-color: #96c955;
}

.emotion-12[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-17"
>
  <div
    className="emotion-16"
  >
    <div
      className="emotion-15"
    >
      <form
        action=""
        className="emotion-14"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-0"
        >
          Facet
           Visualization
        </h2>
        <div
          className="emotion-1"
        />
        <label
          className="emotion-3"
        >
          Metadata Type
          <select
            className="emotion-2"
            defaultValue="system.type"
            onChange={[Function]}
          >
            <option
              disabled={true}
              value=""
            >
              Select metadata type
            </option>
            <optgroup
              label="Analysis"
            >
              <optgroup
                label="Zvi"
              >
                <option
                  value="analysis.zvi.tinyProxy"
                >
                  tinyProxy
                </option>
              </optgroup>
            </optgroup>
            <optgroup
              label="Clip"
            >
              <option
                value="clip.pile"
              >
                pile
              </option>
              <option
                value="clip.sourceAssetId"
              >
                sourceAssetId
              </option>
              <option
                value="clip.timeline"
              >
                timeline
              </option>
              <option
                value="clip.type"
              >
                type
              </option>
            </optgroup>
            <optgroup
              label="Location"
            >
              <option
                value="location.city"
              >
                city
              </option>
              <option
                value="location.code"
              >
                code
              </option>
              <option
                value="location.country"
              >
                country
              </option>
            </optgroup>
            <optgroup
              label="Media"
            >
              <option
                value="media.author"
              >
                author
              </option>
              <option
                value="media.content"
              >
                content
              </option>
              <option
                value="media.description"
              >
                description
              </option>
              <option
                value="media.keywords"
              >
                keywords
              </option>
              <option
                value="media.orientation"
              >
                orientation
              </option>
              <option
                value="media.title"
              >
                title
              </option>
              <option
                value="media.type"
              >
                type
              </option>
            </optgroup>
            <optgroup
              label="Source"
            >
              <option
                value="source.extension"
              >
                extension
              </option>
              <option
                value="source.filename"
              >
                filename
              </option>
              <option
                value="source.mimetype"
              >
                mimetype
              </option>
              <option
                value="source.path"
              >
                path
              </option>
            </optgroup>
            <optgroup
              label="System"
            >
              <option
                value="system.dataSourceId"
              >
                dataSourceId
              </option>
              <option
                value="system.jobId"
              >
                jobId
              </option>
              <option
                value="system.projectId"
              >
                projectId
              </option>
              <option
                value="system.state"
              >
                state
              </option>
              <option
                value="system.taskId"
              >
                taskId
              </option>
            </optgroup>
          </select>
        </label>
        <div
          className="emotion-4"
        />
        <div
          className="emotion-8"
        >
          <label
            className="emotion-5"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-7"
          >
            <input
              className="emotion-6"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-8"
          >
             
          </div>
        </div>
        <div
          className="emotion-13"
        >
          <button
            className="emotion-10"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-11"
          />
          <button
            className="emotion-12"
            onClick={[Function]}
            type="button"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
